--- a/src/Server/BlazorBoilerplate.Server/appsettings.json
+++ b/src/Server/BlazorBoilerplate.Server/appsettings.json
@@ -1,17 +1,16 @@
 {
   "ConnectionStrings": {
-    "PostgresConnection": "host=localhost;database=BlazorBoilerplate;user id=postgres;password=password123",
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BlazorBoilerplate;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
   "HostingOnAzure": {
     "RunsOnAzure": false,
     "RunningAsAppService": true,
-    "RunningAsDocker": false, // not implementet yet
+    "RunningAsDocker": false, // not implemented yet
     "AzureKeyVault": {
       "UsingKeyVault": true,
-      "UseManagedAppIdentity": true, // not implementet yet: assigning a managed identity to the app and giving that identity permissons to access contents of the key vault
-      "AppKey": "", // not implementet yet: adding AppKey and AppSecret to the app. Then assigning permissions to these credentials inside the key vault
+      "UseManagedAppIdentity": true, // not implemented yet: assigning a managed identity to the app and giving that identity permissions to access contents of the key vault
+      "AppKey": "", // not implemented yet: adding AppKey and AppSecret to the app. Then assigning permissions to these credentials inside the key vault
       "AppSecret": "",
       "VaultURI": "https://YOURVAULTNAMEHERE.vault.azure.net/",
       "CertificateName": "AuthSample"
@@ -59,7 +58,6 @@
         "Enabled": true
       }
     },
-    "UsePostgresServer": false,
     "IS4ApplicationUrl": "https://blazorboilerplate.com",
     "UseLocalCertStore": true,
     "CertificateThumbprint": "PutYourSSLThumbPrintHere"
