Removed unused authentication providers

--- a/src/Server/BlazorBoilerplate.Server/appsettings.json
+++ b/src/Server/BlazorBoilerplate.Server/appsettings.json
@@ -15,22 +15,6 @@
          "Enabled": true,
          "AppId": "xxx",
          "AppSecret": "xxx"
-      },
-      "Twitter": {
-         "Enabled": true,
-         "ConsumerKey": "xxx",
-         "ConsumerSecret": "xxx"
-      },
-      "Apple": {
-         "Enabled": true,
-         "ClientId": "xxx",
-         "KeyId": "xxx",
-         "TeamId": "xxx"
-      },
-      "Microsoft": {
-         "Enabled": true,
-         "ClientId": "xxx",
-         "ClientSecret": "xxx"
       }
    },
 
@@ -46,9 +30,7 @@
             "Enabled": true
          }
       },
-      "IS4ApplicationUrl": "https://blazorboilerplate.com",
-      "UseLocalCertStore": true,
-      "CertificateThumbprint": "PutYourSSLThumbPrintHere"
+      "IS4ApplicationUrl": "https://blazorboilerplate.com"
    },
 
    "Modules": {
