Fix connection string

--- a/src/Server/BlazorBoilerplate.Server/appsettings.json
+++ b/src/Server/BlazorBoilerplate.Server/appsettings.json
@@ -1,8 +1,7 @@
 {
    "ConnectionStrings": {
-      "MssqlDocker": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BlazorBoilerplate;Trusted_Connection=True;MultipleActiveResultSets=true",
-      "DefaultConnection": "Server=localhost,1533;Database=BlazorBoilerplate;User Id=hts;Password=Axil&311;MultipleActiveResultSets=true",
-      "MssqlDockerInside": "Server=sqlserver;Database=BlazorBoilerplate;User Id=hts;Password=Axil&311;MultipleActiveResultSets=true"
+      "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BlazorBoilerplate;Trusted_Connection=True;MultipleActiveResultSets=true",
+      "BlazorBoilerplate": "Server=sqlserver;Database=theDatabase;User Id=theUser;Password=thePassword;MultipleActiveResultSets=true"
    },
 
    "ExternalAuthProviders": {
@@ -33,6 +32,9 @@
       "IS4ApplicationUrl": "https://blazorboilerplate.com"
    },
 
+   "SecretTest": {
+      "Value1": "good"
+   },
    "Modules": {
       "BlazorBoilerplate.GoogleAnalytics": {
          "TrackingId": "UA-XXXXXXXX-X"
